--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,13 +7,13 @@
 # PASSWORD: RG!_Yw919_83
 
 # DCLOUD
-# VMANAGE: 198.18.1.10
-# PORT: 443
-# USERNAME: admin
-# PASSWORD: C1sco12345
+VMANAGE: 198.18.1.10
+PORT: 443
+USERNAME: admin
+PASSWORD: C1sco12345
 
 # CX_LABS_MX
-VMANAGE: 10.89.1.134
-PORT: 443
-USERNAME: apilover
-PASSWORD: Cisco12345!
+# VMANAGE: 10.89.1.134
+# PORT: 443
+# USERNAME: apilover
+# PASSWORD: Cisco12345!
